bug 213881: parse large (>4k) RDF literals correctly.  r=rjc, sr=brendan